# ai-agents-from-zero

./: .env-example  .gitignore  00-课程目录大纲.md  01-大模型智能体概述.md  02-RAG-搭建企业私有&个人知识库.md  1-1-大模型认知与工程概览.md  1-2-提示词工程.md  1-3-RAG、微调、续训与智能体.md  1-大模型智能体概述.md  10-LangChain快速上手与HelloWorld.md  10-Model-I-O与Ollama本地部署.md  11-Model-I-O与模型接入.md  11-提示词与输出解析.md  12-Ollama本地部署与调用.md  13-提示词与消息模板.md  14-输出解析器.md  15-LCEL与链式调用.md  16-记忆与对话历史.md  16-记忆与对话历史（含Redis基础）.md  17-Tools工具调用.md  18-向量数据库与Embedding实战.md  19-RAG检索增强生成.md  2-RAG-搭建企业私有&个人知识库.md  20-MCP模型上下文协议.md  21-Agent智能体.md  22-LangGraph概述与快速入门.md  23-LangGraphAPI：图与状态.md  23-LangGraphGraphAPI与State.md  24-LangGraphAPI：节点、边与进阶.md  25-LangGraph高级特性.md  26-LangGraph多智能体与A2A.md  3-基于Coze&Dify平台的智能体开发.md  4-Python调用Dify平台工作流.md  5-Python调用Coze平台工作流.md  6-Coze的Windows平台部署.md  7-Dify的Windows平台部署.md  8-企业级大模型的部署.md  8-企业级大模型部署.md  8.1-Docker入门与Dify部署常见问题.md  8.1-Docker相关知识点与常见问题.md  (+17 more)
3-Coze&Dify平台工作流智能体案例与源码/3.1-Coze案例：一键生成行业调研PPT/: 3.1-一键生成行业调研PPT.md
3-Coze&Dify平台工作流智能体案例与源码/3.10-Coze案例：商品营销卖点提炼/: 3.10-商品营销卖点提炼-Coze.md
3-Coze&Dify平台工作流智能体案例与源码/3.2-Coze案例：复刻爆款视频/: 3.2-复刻爆款视频.md
3-Coze&Dify平台工作流智能体案例与源码/3.3-Coze案例：产品营销海报生成/: 3.3-产品营销海报生成.md
3-Coze&Dify平台工作流智能体案例与源码/3.4-Dify案例：一键生成行业调研报告/: 3.4-一键生成行业调研报告.md
3-Coze&Dify平台工作流智能体案例与源码/3.5-Dify案例：客户投诉分类助手-钉钉/: 3.5-客户投诉分类助手-钉钉-工作流.yml  3.5-客户投诉分类助手-钉钉.md
3-Coze&Dify平台工作流智能体案例与源码/3.6-Coze案例：客服对话记录分析/: 3.6-客服对话记录分析-Coze.md
3-Coze&Dify平台工作流智能体案例与源码/3.7-Dify案例：客服对话记录分析/: 3.7-客服对话记录分析-Dify.md
3-Coze&Dify平台工作流智能体案例与源码/3.8-Coze案例：商品评论分析/: 3.8-商品评论分析-商品评论分析-Coze.md
(+166 files in other folders)
