[project]
name = "ai-agents-from-zero"
description = "AI 智能体实战速成指南：从零到企业级落地 - 案例与源码"
readme = "README.md"
# 推荐 3.10；支持 3.10–3.13；3.14 下 langchain-redis 等尚未兼容，故上限为 3.13
requires-python = ">=3.10,<3.14"

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312", "py313"]
include = '\.pyi?$'
exclude = '''
/(
    \.venv
  | venv
  | _build
  | __pycache__
)/
'''
